AVR-014 Avro field validators using SchemaRequirementViolationDto instances.